flutter/ffi/lib/src/equalx_bindings.dart


    capabilityQuery =
        _lib.lookupFunction<_CapabilityQueryNative, _CapabilityQueryDart>(
            'eswp_capability_query');
    registerEncPub =
        _lib.lookupFunction<_RegisterEncPubNative, _RegisterEncPubDart>(
            'eswp_register_enc_pub');
    getEncPub = _lib.lookupFunction<_GetEncPubNative, _GetEncPubDart>(
      'eswp_get_enc_pub',
    );
    isRegistered = _lib.lookupFunction<_IsRegisteredNative, _IsRegisteredDart>(
      'eswp_is_registered',
    );
    publishContext =
        _lib.lookupFunction<_MailboxPublishNative, _MailboxPublishDart>(
            'eswp_publish_context');
    publishPresig =
        _lib.lookupFunction<_MailboxPublishNative, _MailboxPublishDart>(
            'eswp_publish_presig');
    publishFinalSig =
        _lib.lookupFunction<_MailboxPublishNative, _MailboxPublishDart>(
            'eswp_publish_final_sig');
    fetchMessages =
        _lib.lookupFunction<_FetchMessagesNative, _FetchMessagesDart>(
            'eswp_fetch_messages');
    registerDesk = _lib.lookupFunction<_RegisterDeskNative, _RegisterDeskDart>(
      'eswp_register_desk',
    );
    reserveAtomicSwap =
        _lib.lookupFunction<_ReserveAtomicSwapNative, _ReserveAtomicSwapDart>(
            'eswp_reserve_atomic_swap');
    getReservation =
        _lib.lookupFunction<_GetReservationNative, _GetReservationDart>(
            'eswp_get_reservation');

    decodeReservationCreated = _lib.lookupFunction<
        _DecodeReservationCreatedNative,
        _DecodeReservationCreatedDart>('eswp_decode_reservation_created');
    decodeHashlockSet =
        _lib.lookupFunction<_DecodeHashlockSetNative, _DecodeHashlockSetDart>(
            'eswp_decode_hashlock_set');
    decodeAtomicReservationCreated = _lib.lookupFunction<
            _DecodeAtomicReservationCreatedNative,
            _DecodeAtomicReservationCreatedDart>(
        'eswp_decode_atomic_reservation_created');
    decodeTrancheOpened = _lib
        .lookupFunction<_DecodeTrancheOpenedNative, _DecodeTrancheOpenedDart>(
      'eswp_decode_tranche_opened',
    );
    decodeTakerTrancheOpened = _lib.lookupFunction<
        _DecodeTakerTrancheOpenedNative,
        _DecodeTakerTrancheOpenedDart>('eswp_decode_taker_tranche_opened');
    decodeTrancheReserved = _lib.lookupFunction<_DecodeTrancheReservedNative,
        _DecodeTrancheReservedDart>('eswp_decode_tranche_reserved');
    decodeTakerTrancheReserved = _lib.lookupFunction<
        _DecodeTakerTrancheReservedNative,
        _DecodeTakerTrancheReservedDart>('eswp_decode_taker_tranche_reserved');
    decodeSettled = _lib.lookupFunction<_DecodeSettleNative, _DecodeSettleDart>(
      'eswp_decode_settled',
    );
    decodeRefunded =
        _lib.lookupFunction<_DecodeSettleNative, _DecodeSettleDart>(
      'eswp_decode_refunded',
    );

    orchestratorNew =
        _lib.lookupFunction<_OrchestratorNewNative, _OrchestratorNewDart>(
            'eswp_orchestrator_new');
    orchestratorFree =
        _lib.lookupFunction<_OrchestratorFreeNative, _OrchestratorFreeDart>(
            'eswp_orchestrator_free');
    orchestratorResume =
        _lib.lookupFunction<_OrchestratorResumeNative, _OrchestratorResumeDart>(
            'eswp_orchestrator_resume');
    orchestratorStep =
        _lib.lookupFunction<_OrchestratorStepNative, _OrchestratorStepDart>(
            'eswp_orchestrator_step');
    orchestratorCheckDeadlines = _lib.lookupFunction<
        _OrchestratorCheckDeadlinesNative,
        _OrchestratorCheckDeadlinesDart>('eswp_orchestrator_check_deadlines');

    freeBuffer = _lib.lookupFunction<_FreeBufferNative, _FreeBufferDart>(
      'eswp_free_buffer',
    );
    freeString = _lib.lookupFunction<_FreeStringNative, _FreeStringDart>(
      'eswp_free_string',
    );
    errorMessage = _lib.lookupFunction<_ErrorMessageNative, _ErrorMessageDart>(
      'eswp_error_message',
    );
  }

  final ffi.DynamicLibrary _lib;

  late final _WireVersionDart wireVersion;
  late final _BackendClsagDart backendClsagId;
  late final _GenerateMoneroKeypairDart generateMoneroKeypair;
  late final _MoneroDeriveSubaddressDart moneroDeriveSubaddress;
  late final _MoneroComputeKeyImageDart moneroComputeKeyImage;
  late final _GenerateEvmKeypairDart generateEvmKeypair;
  late final _SignEvmMessageDart signEvmMessage;
  late final _ClsagMakePreSigDart clsagMakePreSig;
  late final _ClsagCompleteDart clsagComplete;
  late final _ClsagVerifyDart clsagVerify;
  late final _ClsagExtractDart clsagExtract;
  late final _PrepareRefundDart prepareRefund;
  late final _LockEthDart lockEth;
  late final _RefundCallDart escrowRefund;
  late final _DecodeEventsDart decodeEvents;
  late final _PostTxHashDart postTxHash;
  late final _SettleCallDart escrowSettle;
  late final _LockErc20Dart lockErc20;

  late final _CapabilityQueryDart capabilityQuery;
  late final _RegisterEncPubDart registerEncPub;
  late final _GetEncPubDart getEncPub;
  late final _IsRegisteredDart isRegistered;
  late final _MailboxPublishDart publishContext;
  late final _MailboxPublishDart publishPresig;
  late final _MailboxPublishDart publishFinalSig;
  late final _FetchMessagesDart fetchMessages;
  late final _RegisterDeskDart registerDesk;
  late final _ReserveAtomicSwapDart reserveAtomicSwap;
  late final _GetReservationDart getReservation;

  late final _DecodeReservationCreatedDart decodeReservationCreated;
  late final _DecodeHashlockSetDart decodeHashlockSet;
  late final _DecodeAtomicReservationCreatedDart decodeAtomicReservationCreated;
  late final _DecodeTrancheOpenedDart decodeTrancheOpened;
  late final _DecodeTakerTrancheOpenedDart decodeTakerTrancheOpened;
  late final _DecodeTrancheReservedDart decodeTrancheReserved;
  late final _DecodeTakerTrancheReservedDart decodeTakerTrancheReserved;
  late final _DecodeSettleDart decodeSettled;
  late final _DecodeSettleDart decodeRefunded;

  late final _OrchestratorNewDart orchestratorNew;
  late final _OrchestratorFreeDart orchestratorFree;
  late final _OrchestratorResumeDart orchestratorResume;
  late final _OrchestratorStepDart orchestratorStep;
  late final _OrchestratorCheckDeadlinesDart orchestratorCheckDeadlines;

  late final _FreeBufferDart freeBuffer;
  late final _FreeStringDart freeString;
  late final _ErrorMessageDart errorMessage;
}
